# http-server-in-rust-

./: Cargo.toml  README.md
src/: .main.rs.swp  client_handlers.rs  errors.rs  lib.rs  main.rs  parser.rs  request.rs  response.rs  server.rs  time.rs
src/http/: method.rs  mod.rs  request.rs  response.rs
src/middleware/: cors.rs  logger.rs  mod.rs  static_files.rs
src/pool/: mod.rs
src/router/: mod.rs
tests/: parsing_test.rs  server_test.rs
