[package]
name = "http-server-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[lib]
path = "src/lib.rs" 
[dependencies]
anyhow = "1.0.59"                                  
bytes = "1.3.0"                                    
thiserror = "1.0.38"                               
tokio = { version = "1.23.0", features = ["full"] }
nom = "7.1.3"                                      
itertools = "0.11.0"                              

[dev-dependencies]
pretty_assertions = "1.3.0"                      

