[package]
name = "http-server-starter-rust"
version = "0.1.0"
authors = ["Youssef-Shehata"]
edition = "2021"

[lib]
path = "src/lib.rs" 

[dependencies]
anyhow = "1.0.59"                                  
bytes = "1.3.0"                                    
thiserror = "1.0.38"                               
tokio = { version = "1.23.0", features = ["full"] }
nom = "7.1.3"                                      
itertools = "0.11.0"                              
futures = "0.3"
tokio-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1.0"
tokio-tungstenite = "0.20"
mime_guess = "2.0"
async-stream = "0.3"
pin-project-lite = "0.2"

[dev-dependencies]
actix-web = "4.9.0"
criterion = "0.5.1"
hyper = "1.5.2"
reqwest = { version = "0.11", features = ["json"] }

pretty_assertions = "1.3.0"                      



